--- a/index.html
+++ b/index.html
@@ -1,18 +1,28 @@
 <!DOCTYPE html>
-<html ng-app="mp3Playground">
+<html ng-app="Mp3Playground">
   <head>
     <meta charset="utf-8">
     <title>MP3 Playground</title>
     <link rel="stylesheet" href="css/styles.css">
+    <script src="js/auth/jwt-decode.2.0.1.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.js"></script>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-resource.js"></script>
+    <script src="js/app.js"></script>
   </head>
   <body>
     <a ui-sref="#">Community Playlists</a>
     <a ui-sref="#">Add Playlist</a>
     <div ui-view></div>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.js"></script>
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-resource.js"></script>
-    <script src="js/app.js"></script>
+
     <script src="js/config/routes.js"></script>
+    <script src="js/config/app.debug.js"></script>
+    <script src="js/config/app.httpInterceptors.js"></script>
+    <script src="js/config/authErrorRedirect.service.js"></script>
+    <script src="js/config/jsonHeaders.service.js"></script>
+    <script src="js/config/tokenSigning.service.js"></script>
+    <script src="js/auth/auth.service.js"></script>
+    <script src="js/auth/token.service.js"></script>
+    <script src="js/auth/user.service.js"></script>
   </body>
 </html>
