--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="Mp3Playground">
+<html>
   <head>
     <meta charset="utf-8">
     <title>MP3 Playground</title>
@@ -10,10 +10,25 @@
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-resource.js"></script>
     <script src="js/app.js"></script>
   </head>
-  <body>
-    <a ui-sref="#">Community Playlists</a>
-    <a ui-sref="#">Add Playlist</a>
-    <div ui-view></div>
+  <body ng-app="Mp3Playground">
+    <header ng-controller="NavbarController as vm">
+     <nav class="navbar navbar-default navbar-fixed-top">
+       <div class="container">
+         <a ui-sref="welcome" class="navbar-brand">Home</a>
+           <button ng-hide="vm.authService.isLoggedIn()" ui-sref="signin" type="button" class="btn btn-default navbar-btn navbar-right">Sign in</button>
+           <button ng-show="vm.authService.isLoggedIn()" ng-click= "vm.authService.logOut()" type="button" class="btn btn-default navbar-btn navbar-right">Sign out</button>
+       </div>
+     </nav>
+    </header>
+
+<h1>Playlists</h1>
+<nav>
+ <a ui-sref="index">All</a>
+ <a ui-sref="new">New</a>
+ <a ui-sref="about">My Playlists</a>
+</nav>
+
+<section ui-view></section>
 
     <script src="js/config/routes.js"></script>
     <script src="js/config/app.debug.js"></script>
