--- a/index.html
+++ b/index.html
@@ -4,31 +4,25 @@
     <meta charset="utf-8">
     <title>MP3 Playground</title>
     <link rel="stylesheet" href="css/styles.css">
-    <script src="js/auth/jwt-decode.2.0.1.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.js"></script>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-resource.js"></script>
-    <script src="js/app.js"></script>
   </head>
   <body ng-app="Mp3Playground">
-    <header ng-controller="NavbarController as vm">
-     <nav class="navbar navbar-default navbar-fixed-top">
-       <div class="container">
-         <a ui-sref="welcome" class="navbar-brand">Home</a>
-           <button ng-hide="vm.authService.isLoggedIn()" ui-sref="signin" type="button" class="btn btn-default navbar-btn navbar-right">Sign in</button>
-           <button ng-show="vm.authService.isLoggedIn()" ng-click= "vm.authService.logOut()" type="button" class="btn btn-default navbar-btn navbar-right">Sign out</button>
-       </div>
-     </nav>
-    </header>
+    <navbar></navbar>
 
-<h1>Playlists</h1>
-<nav>
- <a ui-sref="index">All</a>
- <a ui-sref="new">New</a>
- <a ui-sref="about">My Playlists</a>
-</nav>
+    <h1>Playlists</h1>
+    <nav>
+     <a ui-sref="index">All</a>
+     <a ui-sref="new">New</a>
+     <a ui-sref="about">My Playlists</a>
+    </nav>
 
-<section ui-view></section>
+    <song-upload></song-upload>
+
+    <section ui-view></section>
+
+    <script src="js/app.js"></script>
 
     <script src="js/config/routes.js"></script>
     <script src="js/config/app.debug.js"></script>
@@ -36,8 +30,16 @@
     <script src="js/config/authErrorRedirect.service.js"></script>
     <script src="js/config/jsonHeaders.service.js"></script>
     <script src="js/config/tokenSigning.service.js"></script>
+
     <script src="js/auth/auth.service.js"></script>
     <script src="js/auth/token.service.js"></script>
     <script src="js/auth/user.service.js"></script>
+
+    <script src="js/components/navbar/navbar.js"></script>
+    <script src="js/components/songUpload/songUpload.js"></script>
+    <script src="js/repos/songsRepo.js"></script>
+
+    <script src="js/controllers/songs.controller.js"></script>
+
   </body>
 </html>
