--- a/index.html
+++ b/index.html
@@ -4,9 +4,16 @@
     <meta charset="utf-8">
     <title>MP3 Playground</title>
     <link rel="stylesheet" href="css/styles.css">
+    <link href='http://fonts.googleapis.com/css?family=Roboto:400,500' rel='stylesheet' type='text/css'>
+    <link href='https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css'
+          rel='stylesheet' type='text/css'>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.9.1/styles/github.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/angular-material/1.0.0-rc3/angular-material.min.css"
+          rel="stylesheet" type="text/css"/>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.js"></script>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-resource.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/wavesurfer.js/1.0.52/wavesurfer.min.js"></script>
   </head>
   <body ng-app="Mp3Playground">
     <navbar></navbar>
@@ -17,29 +24,25 @@
      <a ui-sref="new">New</a>
      <a ui-sref="about">My Playlists</a>
     </nav>
-
+    <div id="waveform"></div>
     <song-upload></song-upload>
 
     <section ui-view></section>
 
     <script src="js/app.js"></script>
-
     <script src="js/config/routes.js"></script>
     <script src="js/config/app.debug.js"></script>
     <script src="js/config/app.httpInterceptors.js"></script>
     <script src="js/config/authErrorRedirect.service.js"></script>
     <script src="js/config/jsonHeaders.service.js"></script>
     <script src="js/config/tokenSigning.service.js"></script>
-
     <script src="js/auth/auth.service.js"></script>
     <script src="js/auth/token.service.js"></script>
     <script src="js/auth/user.service.js"></script>
-
     <script src="js/components/navbar/navbar.js"></script>
     <script src="js/components/songUpload/songUpload.js"></script>
     <script src="js/repos/songsRepo.js"></script>
-
+    <script src="js/repos/playlistsRepo.js"></script>
     <script src="js/controllers/songs.controller.js"></script>
-
   </body>
 </html>
