--- a/index.html
+++ b/index.html
@@ -43,12 +43,17 @@
     <script src="js/auth/token.service.js"></script>
     <script src="js/auth/user.service.js"></script>
 
+    <script src="js/repos/songsRepo.js"></script>
+    <script src="js/repos/playlistsRepo.js"></script>
+
     <script src="js/components/navbar/navbar.js"></script>
     <script src="js/components/songUpload/songUpload.js"></script>
     <script src="js/components/playlistPlayer/playlistPlayer.js"></script>
+    <script src="js/components/playlistForm/playlistForm.js"></script>
+    <script src="js/components/addSongToPlaylistForm/addSongToPlaylistForm.js"></script>
 
-    <script src="js/repos/songsRepo.js"></script>
-    <script src="js/repos/playlistsRepo.js"></script>
+    <script src="js/collections/playlistsCollection.js"></script>
+
 
     <script src="js/controllers/signin.controller.js"></script>
     <script src="js/controllers/songs.controller.js"></script>
