--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-messages.min.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.js"></script>
     <script src="js/auth/jwt.decode.2.0.1.js"></script>
-    <!-- <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script> -->
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.js"></script>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-resource.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/wavesurfer.js/1.0.52/wavesurfer.min.js"></script>
@@ -25,10 +25,10 @@
     <navbar></navbar>
 
     <nav>
-       <a ui-sref="index">All</a>
-       <a ui-sref="new">New</a>
-       <a ui-sref="playlists">My Playlists</a>
-       <a ui-sref="songs">My Songs</a>
+       <!-- <a ui-sref="index">All</a>
+       <a ui-sref="new">New</a> -->
+       <a ui-sref="playlists">Playlists</a>
+       <a ui-sref="songs">Songs</a>
     </nav>
 
     <section ui-view></section>
