--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>MP3 Playground</title>
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/helpers.css">
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,500' rel='stylesheet' type='text/css'>
     <link href='https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css'
           rel='stylesheet' type='text/css'>
