--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
     <script src="js/config/authErrorRedirect.service.js"></script>
     <script src="js/config/jsonHeaders.service.js"></script>
     <script src="js/config/tokenSigning.service.js"></script>
+    <script src="js/config/constants.js"></script>
 
     <script src="js/auth/auth.service.js"></script>
     <script src="js/auth/token.service.js"></script>
@@ -54,6 +55,8 @@
 
     <script src="js/repos/songsRepo.js"></script>
     <script src="js/repos/playlistsRepo.js"></script>
+    <script src="js/filters/secondsToMinutes.js"></script>
+    <script src="js/repos/lastfmRepo.js"></script>
 
     <script src="js/audiometa.js"></script>
 
