ngmaterial playlists, forms

--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
   <body ng-app="Mp3Playground">
     <navbar></navbar>
 
-    <nav>
-       <!-- <a ui-sref="index">All</a>
-       <a ui-sref="new">New</a> -->
+    <!-- <nav>
+       <a ui-sref="index">All</a>
+       <a ui-sref="new">New</a>
        <a ui-sref="playlists">Playlists</a>
        <a ui-sref="songs">Songs</a>
-    </nav>
+    </nav> -->
 
     <section ui-view></section>
 
