--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-resource.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/wavesurfer.js/1.0.52/wavesurfer.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/angular-material-icons/0.7.1/angular-material-icons.min.js"></script>
+    <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
+	  <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
   </head>
   <body ng-app="Mp3Playground">
     <navbar></navbar>
